Fixed upload, z-index

--- a/src/assets/scss/_helpers.scss
+++ b/src/assets/scss/_helpers.scss
@@ -27,6 +27,9 @@
 .ml-1 {
   margin-left: 1rem !important;
 }
+.ml-2 {
+  margin-left: 2rem !important;
+}
 
 .center {
   display: block;
@@ -97,6 +100,10 @@
 
 .block {
   display: block;
+}
+
+.section {
+  padding: 1rem 2rem;
 }
 
 .no-select {
